change background for result__item

--- a/css/style.css
+++ b/css/style.css
@@ -270,18 +270,28 @@ h2.title{
 .results__item {
     max-width: 22rem;
 }
-.result__img {
-    display: block;
-    margin: 0 auto;
+.result__item-container{
     background: #B4E2FF;
     border-radius: 50%;
-    padding: 3rem;
+    display: block;
+    margin: 0 auto;
+    width: 11.8rem;
+    height: 11.8rem;
     margin-bottom: 2.4rem;
-    transition: all .4s;
+    transition: all .2s;
+    position: relative;
 }
-.result__img:hover{
-    padding: 3.2rem;
+.result__img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+.result__item-container:hover{
     box-shadow: 0px 0px 10px rgb(227, 220, 83);
+    width: 12rem;
+    height: 12rem;
 }
 .result__name {
     font-weight: 300;
